# cinderlib

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cinderlib/: __init__.py  _fake_packages.py  cinderlib.py  nos_brick.py  objects.py  serialization.py
cinderlib/cmd/: cinder_cfg_to_python.py  cinder_to_yaml.py
cinderlib/persistence/: __init__.py  base.py  dbms.py
cinderlib/tests/functional/: base_tests.py  ceph.yaml  (+2 more)
devstack/: README.rst
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  validated.rst  validating.rst
playbooks/: cinder-gate-run.yaml  required-projects-bindeps.yaml  setup-ceph.yaml  setup-lvm.yaml
releasenotes/notes/: IBM-SVC-667322aa2b4ac24d.yaml  accept-template-values-e228d065800ac5b5.yaml  attach_mode-0cc9cec91dff0fc3.yaml  backend-same-name-86a06844b57600a0.yaml  datetime-subsecond-e123e8d2dda707ea.yaml  drop-py2-a56fb12674516c67.yaml  enhance-extend-687d8e9c4a58e517.yaml  fake-packages-7d5c55e6169f1096.yaml  fix-clone-28b18ddb420ff676.yaml  fix-lvm-extend-e46b0eadf1cd59ec.yaml  fix-mysql-vol-delete-f675778ea150cb9a.yaml  fix-not-local-a8cf22a2092c8a98.yaml  fix-privsep-venv-2ae8ce791136ae73.yaml  improve-list-drivers-9bd501689d5eeb27.yaml  mysql-db-sync-8a9e50a12bbe724d.yaml  privsep-support-acbc955b9845a6ef.yaml  rbd-improve-containerized-detection-2bd8a2f995215cdd.yaml  rbd-missing-file-or-directory-c835abac22f6b32e.yaml  rbd-non-root-ac971f51461d4d6b.yaml  snapshot-vol-type-20e4403ed5a8b0a5.yaml  support-comple-config-options-39ba50c6c9165cc3.yaml  zed-release-7b57944880235392.yaml
releasenotes/source/: conf.py  index.rst
roles/run-cinderlib-tests/: README.rst
tools/: generate_uc.sh  special_install.sh  virtualenv-sudo.sh
(+20 files in other folders)
